CHORE(GroupServiceImpl): Fixed/added comment lines